ajout partage de droit avec un autre utilisateur (éditeur)
